Add 04, 05, 06 and 07 pages.
The following pages were added: 04, 05, 06 and 07.

Page 03 was finished.

Some classes were added to style.css

Some minor changes were made to bootstrap.css (paddings)

--- a/03.html
+++ b/03.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>02</title>
+        <title>03</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
         <!-- Custom styles for this template -->
@@ -19,30 +19,53 @@
     </head>
     <body class="">
         <div class="container">
-            <div class="row white-text" style="background-image: url(&quot;img/02a.jpg&quot;); background-color: #577CB2;">
+            <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
-                    <h1>Contents</h1>
-                    <p><img src="img/bullet01.png" class="bullet"><a href="#">Introduction</a></p>
-                    <p><img src="img/bullet02.png" class="bullet"><a href="#">Am I at risk of a fall?</a><br></p>
-                    <p><img src="img/bullet02.png" class="bullet"><a href="#">How to reduce your risk</a><br></p>
-                    <p><img src="img/bullet03.png" class="bullet"><a href="#">Fall-proof your home</a><br></p>
-                    <p><img src="img/bullet03.png" class="bullet"><a href="#">Stay safe out and about</a><br></p>
-                    <p><img src="img/bullet04.png" class="bullet"><a href="#">Keep moving for a balanced life</a><br></p>
-                    <p><img src="img/bullet04.png" class="bullet"><a href="#">Six exercises for strength and balance</a><br></p>
-                    <p><img src="img/bullet05.png" class="bullet"><a href="#">Never step on a banana skin!</a><br></p>
-                    <p><img src="img/bullet06.png" class="bullet"><a href="#">Getting up from a fall</a><br></p>
-                    <p><img src="img/bullet06.png" class="bullet"><a href="#">If you fall and can’t get up</a><br></p>
-                    <p><img src="img/bullet07.png" class="bullet"><a href="#">Help prevent other people falling</a><br></p>
-                    <p><img src="img/bullet07.png" class="bullet"><a href="#">How to help if someone has fallen</a><br></p>
-                    <p><img src="img/bullet01.png" class="bullet"><a href="#">Summary: key messages</a><br></p>
-                    <p><img src="img/bullet01.png" class="bullet"><a href="#">Useful contacts</a><br></p>
+                    <h1 class="blue">Welcome</h1> 
                 </div>
-                <div class="col-sm-12 col-xs-12 col-md-10 col-lg-10">
-                    <div class="clear-highlighted-box">
-                        <p><b>Test yourself!</b></p>
-                        <p>Suspect you’re slowing down? Take the timed online Get Up&nbsp;and Go test to see if you could be steadier on your pins.<br></p>
-                        <p>Visit <a href="http://www.csp.org.uk/timedupandgo" target="_blank">www.csp.org.uk/timedupandgo</a> to ﬁnd out more<br></p>
-                    </div>
+                <div class="col-md-6 col-xs-12 col-sm-12 col-lg-6"> 
+                    <h2 class="grey">DON’T FALL
+FOR IT!</h2>
+                    <h2 class="grey">It’s time to tackle
+some myths about
+falling</h2>
+                    <h3 class="blue">Only really frail or infirm
+people fall, don’t they?<br></h3>
+                    <p>Not at all. One in three people
+over 65 – plenty of them in
+decent health – will have a fall
+this year. However it’s true that
+our risk of falling increases as
+we age: half of all people over
+80 will fall at least once a year.&nbsp;<br></p>
+                    <h3 class="blue">It’s just an inevitable part of
+getting older, isn’t it?<br></h3>
+                    <p>Not necessarily. Experts believe
+the vast majority of falls could
+be prevented with some fairly
+modest changes to our lifestyle
+and homes. Medically speaking,
+though, falls are often a warning
+sign that something isn’t quite
+right – but it’s often something
+quite treatable.<br></p>
+                </div>
+                <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
+                    <a href="http://saga.co.uk/falls" class="" target="_blank">
+                        <img src="img/03a.png" class="img-responsive">
+                    </a>
+                    <h3 class="blue">How do I know my risk?</h3>
+                    <p>Go through our checklist
+overleaf: you might be
+surprised by how many
+boxes you tick.<br></p>
+                    <p>Then take a few minutes to read
+this booklet. With falls robbing
+many older people of their hardwon
+health and independence,
+– and costing us all £2.3 billion
+a year – it could be the most
+valuable time you spend today<br></p>
                 </div>
             </div>
         </div>
