--- a/02.html
+++ b/02.html
@@ -19,7 +19,7 @@
     </head>
     <body class="">
         <div class="container">
-            <div class="row white-text" style="background-image: url(&quot;img/02a.jpg&quot;); background-color: #577CB2;">
+            <div class="row white" style="background-image: url(&quot;img/02a.jpg&quot;); background-color: #577CB2;">
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
                     <h1>Contents</h1>
                     <p><img src="img/bullet01.png" class="bullet"><a href="#">Introduction</a></p>
