Add 08, 09 and 10 pages
The following pages were added: 08, 09 and 10.

--- a/02.html
+++ b/02.html
@@ -22,20 +22,20 @@
             <div class="row white" style="background-image: url(&quot;img/02a.jpg&quot;); background-color: #577CB2;">
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
                     <h1>Contents</h1>
-                    <p><img src="img/bullet01.png" class="bullet"><a href="#">Introduction</a></p>
-                    <p><img src="img/bullet02.png" class="bullet"><a href="#">Am I at risk of a fall?</a><br></p>
-                    <p><img src="img/bullet02.png" class="bullet"><a href="#">How to reduce your risk</a><br></p>
-                    <p><img src="img/bullet03.png" class="bullet"><a href="#">Fall-proof your home</a><br></p>
-                    <p><img src="img/bullet03.png" class="bullet"><a href="#">Stay safe out and about</a><br></p>
-                    <p><img src="img/bullet04.png" class="bullet"><a href="#">Keep moving for a balanced life</a><br></p>
-                    <p><img src="img/bullet04.png" class="bullet"><a href="#">Six exercises for strength and balance</a><br></p>
-                    <p><img src="img/bullet05.png" class="bullet"><a href="#">Never step on a banana skin!</a><br></p>
-                    <p><img src="img/bullet06.png" class="bullet"><a href="#">Getting up from a fall</a><br></p>
-                    <p><img src="img/bullet06.png" class="bullet"><a href="#">If you fall and can’t get up</a><br></p>
-                    <p><img src="img/bullet07.png" class="bullet"><a href="#">Help prevent other people falling</a><br></p>
-                    <p><img src="img/bullet07.png" class="bullet"><a href="#">How to help if someone has fallen</a><br></p>
-                    <p><img src="img/bullet01.png" class="bullet"><a href="#">Summary: key messages</a><br></p>
-                    <p><img src="img/bullet01.png" class="bullet"><a href="#">Useful contacts</a><br></p>
+                    <p><img src="img/bullet01.png" class="bullet-spacing"><a href="#">Introduction</a></p>
+                    <p><img src="img/bullet02.png" class="bullet-spacing"><a href="#">Am I at risk of a fall?</a><br></p>
+                    <p><img src="img/bullet02.png" class="bullet-spacing"><a href="#">How to reduce your risk</a><br></p>
+                    <p><img src="img/bullet03.png" class="bullet-spacing"><a href="#">Fall-proof your home</a><br></p>
+                    <p><img src="img/bullet03.png" class="bullet-spacing"><a href="#">Stay safe out and about</a><br></p>
+                    <p><img src="img/bullet04.png" class="bullet-spacing"><a href="#">Keep moving for a balanced life</a><br></p>
+                    <p><img src="img/bullet04.png" class="bullet-spacing"><a href="#">Six exercises for strength and balance</a><br></p>
+                    <p><img src="img/bullet05.png" class="bullet-spacing"><a href="#">Never step on a banana skin!</a><br></p>
+                    <p><img src="img/bullet06.png" class="bullet-spacing"><a href="#">Getting up from a fall</a><br></p>
+                    <p><img src="img/bullet06.png" class="bullet-spacing"><a href="#">If you fall and can’t get up</a><br></p>
+                    <p><img src="img/bullet07.png" class="bullet-spacing"><a href="#">Help prevent other people falling</a><br></p>
+                    <p><img src="img/bullet07.png" class="bullet-spacing"><a href="#">How to help if someone has fallen</a><br></p>
+                    <p><img src="img/bullet01.png" class="bullet-spacing"><a href="#">Summary: key messages</a><br></p>
+                    <p><img src="img/bullet01.png" class="bullet-spacing"><a href="#">Useful contacts</a><br></p>
                 </div>
                 <div class="col-sm-12 col-xs-12 col-md-10 col-lg-10">
                     <div class="clear-highlighted-box">
