--- a/10.html
+++ b/10.html
@@ -76,8 +76,8 @@ Tape any trailing extension
 leads to skirting boards.<br></p>
                 </div>
                 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-                    <img src="img/logo01.jpg">Discover our falls prevention tips at 
-                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a>
+                    <img src="img/logo01.jpg">Read how to make decluttering simple at  
+                    <a href="http://saga.co.uk/magazine" target="_blank">saga.co.uk/magazine</a>
                 </div>
             </div>
         </div>
