--- a/12.html
+++ b/12.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>04</title>
+        <title>12</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
         <!-- Custom styles for this template -->
@@ -21,43 +21,54 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
-                    <h1 class="orange">Am I at risk of a fall?</h1> 
+                    <h1 class="cyan">Stay safe out and about</h1> 
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <h2 class="grey">Everyone is more at risk of a fall as
-they age; it’s a big cause of hospital
-admissions and can result in serious
-injuries and long-term complications.
-Falling can also contribute to a loss of
-confidence and independence</h2> 
-                </div>
-                <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6">
-                    <img src="img/4a.jpg" class="img-responsive">
+                    <h2 class="grey">There’s no reason to curtail your
+activities away from home because
+you are worried about falling, but it
+makes sense to take some simple
+precautions</h2> 
                 </div>
                 <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-                    <p>Clearly we can’t change
-our biological age, but by
-understanding what puts us at
-risk, we can take preventative
-action.&nbsp;</p>
-                    <p>If you’ve fallen before, you’re
-right at the top of the risk list for
-another one, so it’s even more
-vital to take the steps outlined in
-this booklet.&nbsp;</p>
-                    <p>So take a look at the checklist
-opposite and see how many
-you tick. Then read the following
-pages to find out why our fall
-risk increases as we age – and
-the many positive and easy
-steps we can all take to cut that
-risk and protect our freedom,
-whether we’re 65 or 95!<br></p>
+                    <h3 class="cyan">In the street</h3>
+                    <p>• Take your time and don’t rush.
+Scan an area for trip hazards –
+cracked pavements, obstacles
+and uneven surfaces – before
+walking.</p>
+                    <p>• Carrying shopping bags can
+obstruct your view of the
+pavement; consider using
+a rucksack instead (it’s also
+better for your back).</p>
+                    <p>• Watch out for shop entrances
+with ‘lipped’ door frames,
+especially if you’re stepping
+inside out of bright light; give
+your eyes time to adjust to the
+darker conditions.<br></p>
+                </div>
+                <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 leveling-padding">
+                    <p>• Watch out for subtle changes of gradient, especially near
+pedestrian crossings.&nbsp;</p>
+                    <p>• Keep your bus pass/money
+near to hand so you don’t have
+to root around in your bag.
+That way you’ll stand a better
+chance of boarding safely.&nbsp;</p>
+                    <p>• Don’t be afraid to ask the
+bus driver to wait until you’re
+seated before moving off.</p>
+                    <p>• Don’t worry if you think
+you’re being slow and
+inconveniencing others:
+staying safe is more important.
+Chances are that no one has
+noticed anyway.&nbsp;<br></p>
                 </div>
                 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-                    <img src="img/logo01.jpg">Read our home muscle-st
-                    rengthening plan at 
+                    <img src="img/logo01.jpg">Find the latest health and wellbeing information at 
                     <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a>
                 </div>
             </div>
