--- a/14.html
+++ b/14.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>04</title>
+        <title>14</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
         <!-- Custom styles for this template -->
@@ -21,43 +21,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
-                    <h1 class="orange">Am I at risk of a fall?</h1> 
+                    <h1 class="aquamarine">Keep moving for
+a balanced life</h1> 
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <h2 class="grey">Everyone is more at risk of a fall as
-they age; it’s a big cause of hospital
-admissions and can result in serious
-injuries and long-term complications.
-Falling can also contribute to a loss of
-confidence and independence</h2> 
+                    <h2 class="grey">We’ve seen how ageing impairs
+balance, muscles and joints.
+And this is made worse if we spend
+long periods sitting down</h2> 
                 </div>
-                <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6">
-                    <img src="img/4a.jpg" class="img-responsive">
-                </div>
-                <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-                    <p>Clearly we can’t change
-our biological age, but by
-understanding what puts us at
-risk, we can take preventative
-action.&nbsp;</p>
-                    <p>If you’ve fallen before, you’re
-right at the top of the risk list for
-another one, so it’s even more
-vital to take the steps outlined in
-this booklet.&nbsp;</p>
-                    <p>So take a look at the checklist
-opposite and see how many
-you tick. Then read the following
-pages to find out why our fall
-risk increases as we age – and
-the many positive and easy
-steps we can all take to cut that
-risk and protect our freedom,
-whether we’re 65 or 95!<br></p>
+                <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
+                    <p>The more active you can be – and the more you break up your day
+so you’re not sitting for extended periods – the more you can offset
+the effects of ageing.</p>
+                    <img src="img/14a.jpg" class="img-responsive" />
                 </div>
                 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-                    <img src="img/logo01.jpg">Read our home muscle-st
-                    rengthening plan at 
+                    <img src="img/logo01.jpg">Find out the basics, and the benefits, of t’ai chi at 
                     <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a>
                 </div>
             </div>
