--- a/15.html
+++ b/15.html
@@ -26,7 +26,7 @@
 shoulders regularly and get
 up and walk about in every ad
 break or between programmes.</p>
-                    <div class="blue-highlighted-box">
+                    <div class="aquamarine-highlighted-box">
                         <h3 class="aquamarine" style="margin-top: 0px;">These activities are all
 fantastic for maintaining
 balance and mobility:</h3>
@@ -53,7 +53,7 @@ good balance.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 leveling-padding">
-                    <div class="blue-highlighted-box">
+                    <div class="aquamarine-highlighted-box">
                         <img src="img/15a.png" class="img-responsive" width="50">
                         <h3 class="">Managing your fears</h3>
                         <p class="">Some people get so worried
